--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 		.nomarg{margin: 0 !important;}
 		.desktop-hide, .spanish-text{display: none;}
 		
-		header{padding: 10px; border-bottom: 1px solid #294189; position: relative;}
+		header{padding: 10px; position: relative;}
 		.CTA{width: 237px; background-color: #294189; font-weight: bold; text-align: center; padding: 18px 0; font-size: 1.2em;
 			 border: 2px solid #294189;}
 		.CTA:hover{background-color: #fff; color: #294189; }
