--- a/order-confirmation.html
+++ b/order-confirmation.html
@@ -8,113 +8,8 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
 	<title>Autoclean Mop | Order Confirmation Page</title>
-<!-- 	<link rel="stylesheet" href="css/style.css">
- -->	<style>
-		*{text-decoration: none; margin: 0; padding: 0; max-width: 100%;}
-		html,body{margin: 0; padding: 0; font-family: 'Open Sans', sans-serif; color: #1B263B; font-size: 18px;
-				  background: #E9ECF3; letter-spacing: .5px;}
-		img{border: none;}
-		li{list-style-type: none;}
-		div{display: block; margin: 0; padding: 0; box-sizing: border-box;}
-		u{text-decoration: underline;}
-		s{text-decoration: line-through;}
-		i{font-style: italic;}
-		b, .bold{font-weight: bold;}
-		a:link, a:visited, a:active{text-decoration: none; color: inherit;}
-		.Fright{float: right;}
-		.Fleft{float: left;}
-		.clear{clear: both;}
-		.wrapper{width: 100%; padding: 5% 0;}
-		.container{max-width: 1200px; margin: auto; width: 100%;}
-		.row{padding: 0 30px;}
-		.align-left{text-align: left;}
-		.inline{display: inline;}
-		.inline-block{display: inline-block;}
-		.uppercase{text-transform: uppercase;}
-		.center{text-align: center;}
-		.relative{position: relative;}
-		.hidden{display: none;}
-		.flex-container{display: flex;}
-		.space-between{justify-content: space-between;}
-		.LightBlueBack{background: #5FBFF9 !important; margin-top: 40px; border: 2px solid #5FBFF9 !important;}
-		.LightBlueColor{color: #5FBFF9;}
-		.marbot15{margin-bottom: 15px;}
-		.marbot20{margin-bottom: 20px !important;;}
-		.marbot30{margin-bottom: 30px;}
-		.marbot40{margin-bottom: 40px;}
-		.martop10{margin-top: 10px;}
-		.martop30{margin-top: 30px;}
-		.martop40{margin-top: 40px;}
-		.marright5per{margin-right: 5%;}
-		.blue-font{color: #294189 !important;}
-		.black-font{color: #1B263B;}
-		.font20{font-size: 20px;}
-		.font24{font-size: 24px;}
-		.font26{font-size: 26px;}
-		.font28{font-size: 28px;}
-		.pad4{padding: 4%;}
-		.nomarg{margin: 0 !important;}
-		.desktop-hide{display: none;}
-		sup{font-size: 12px;}
-		
-		header{padding: 10px; position: relative; background: #fff;}
-		.CTA{width: 335px; background-color: #294189; font-weight: bold; text-align: center; padding: 18px 0; font-size: 1.2em;
-			 border: 2px solid #294189; color: #fff; margin-top: 40px;}
-		.CTA:hover{background-color: #fff; color: #294189; }
-		.language-button{width: 130px; border: 2px solid #294189; text-align: center; cursor: pointer; font-size: 22px;
-						 font-weight: bold; color: #294189; padding: 10px 0; float: right; margin-top: 10px;}
-		.language-button:hover {color: #fff; background: #294189;}
-		.LightBlueBack:hover{color: #5FBFF9; background: #fff !important;}
-		
-		.summary-div{background: #fff; max-width: 800px; margin: 60px auto; border: 1px solid #294189;}
-		.summary-div hr{border: 0; border-top: 1px solid #294189; margin-top: 30px;}
-		.order-item{margin-bottom: 30px; position: relative;}
-		.order-item img{vertical-align: top; margin-right: 30px; max-width: 170px;}
-		.right-column{float: right; font-size: 24px; text-align: right;}
-		.right-text{margin-left: 130px; float: right; display: inline-block; margin-bottom: 10px; width: 80px;}
-		.left-text{display: inline-block;}
-		.price-text{font-size: 24px; float: right;}
-		.summary-title{font-weight: bold; font-size: 28px; text-align: center; padding: 30px 0; color: #294189;}
-		.summary-bottom{padding: 30px}
-
-		h1{font-size: 45px; margin-bottom: 40px;}
-		h2{font-size: 30px; margin-bottom: 20px;}
-		
-
-		footer{background: #1B263B; text-align: center; color: #fff;}
-
-
-		@media only screen and (max-width: 1000px) {
-			html,body{font-size: 16px;}
-			.row{padding: 0 20px;}
-			.flex-container{display: block;}
-			.mobile-hide{display: none;}
-			.column65, .column50{width: 100%;}
-			.column{padding: 5%;}
-			h1{font-size: 25px; margin-bottom: 30px;}
-			h2, .summary-title, .font24{font-size: 20px;}
-			.Fright, .Fleft{float: none;}
-			.blue-back p{font-size: 18px;}
-			.CTA{margin: 15px auto; width: 95%;}
-			.mobile-center{text-align: center;}
-			.desktop-hide{display: block;}
-			.mobileFont18{font-size: 18px; font-weight: 100;}
-			.mobileFont14{font-size: 14px;}
-			.icon-style{width: 45px; margin-right: 5px;}
-			footer{padding: 8% 8% 2% !important;}
-			.font28, .price-text{font-size: 19px;}
-			.marbot40{margin-bottom: 20px;}
-			.mobileMarbot20{margin-bottom: 20px;}
-			.mobileMartop20{margin-top: 20px;}
-			.price-text{padding-top: 10px; float: none; text-align: center; font-size: 20px;}
-			.order-item{margin-bottom: 30px;}
-			.summary-div{margin: 40px auto;}
-			.summary-title{padding: 15px 0;}
-			.summary-title hr{margin-top: 15px;}
-			.summary-bottom{padding: 15px}
-			.order-item img{max-width: 100%;}
-		}
-	</style>
+	<link rel="stylesheet" href="css/order-confirmation.css">
+	
 		<!--[if lt IE 9]>
 		<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 		<![endif]-->
@@ -134,33 +29,33 @@
 					<div class="center marbot40">
 						<img src="images/icon_check.png" alt="">
 					</div>
-					<h1 class="blue-font center">Thank you.</h1>
-					<h2 class="blue-font center">Your order was completed successfully.</h2>
-					<p class="font28 center">An email providing the details of your order has been sent to you.</p>
+					<h1 class="blue-font center"><span class="english-text">Thank you.</span><span class="spanish-text">Gracias.</span></h1>
+					<h2 class="blue-font center"><span class="english-text">Your order was completed successfully.</span><span class="spanish-text">Su orden fue completada con éxito.</span></h2>
+					<p class="font28 center"><span class="english-text">An email providing the details of your order has been sent to you.</span><span class="spanish-text">Se le ha enviado un mensaje por correo electrónico con los detalles de su orden.</span></p>
 					<div class="summary-div">
 						<div class="summary-title">
-							Order Summary
+							<span class="english-text">Order Summary<span class="spanish-text">Resumen de su Pedido</span></span>
 							<hr>
 						</div>
 						<div class="summary-bottom">
 						<div class="order-item">
-							<p class="bold font24 marbot20">One system for 2 payments of $24.95 + $14.95 S&P</p>
+							<p class="bold font24 marbot20"><span class="english-text">One system for 2 payments of $24.95 + $14.95 S&amp;P</span><span class="spanish-text">Un sistema en dos pagos de $24.95 + $14.95 M&amp;E</span></p>
 							<div class="Fleft">
 								<img src="images/mop_bucket_cropped2.jpg" alt="" class="Fright"> 
 							</div>
 							<div class="Fright mobileMartop20">
-								<p class="price-text">$24.95 + $14.95 E&P</p>
+								<p class="price-text">$24.95 + $14.95 <span class="english-text">E&P</span><span class="spanish-text">M&amp;E</span></p>
 							</div>
 							<div class="clear"></div>
 							<hr>
 						</div>
 						<div class="order-item">
-							<p class="bold font24 marbot20">3-pack of microfiber pads for $19.95 + $4.95 S&amp;P</p>
+							<p class="bold font24 marbot20"><span class="english-text">Paquete de 3 toallitas de microfibra por $19.95 + $4.95 M&amp;E</span><span class="spanish-text">M&amp;E</span></p>
 							<div class="Fleft">
 								<img src="images/three_pads2.jpg" alt="" class="Fright"> 
 							</div>
 							<div class="Fright mobileMartop20">
-								<p class="price-text">$19.95 + $4.95 S&P</p>
+								<p class="price-text">$19.95 + $4.95 <span class="english-text">S&amp;P</span><span class="spanish-text">M&amp;E</span></p>
 							</div>
 							<div class="clear"></div>
 							<hr>
@@ -171,13 +66,13 @@
 								<p class="left-text">Subtotal</p>
 								<div class="clear"></div>
 								<p class="right-text">$3.50</p>
-								<p class="left-text">Tax</p>
+								<p class="left-text"><span class="english-text">Tax</span><span class="spanish-text">Impuesto</span></p>
 								<div class="clear"></div>
 								<p class="right-text">$19.90</p>
-								<p class="left-text">Shipping &amp; Processing</p>
+								<p class="left-text"><span class="english-text">Shipping &amp; Processing</span><span class="spanish-text">Manejo & Envío</span></p>
 								<div class="clear"></div>
 								<p class="right-text">$88.20</p>
-								<p class="left-text">Order Total</p>
+								<p class="left-text"><span class="english-text">Order Total</span><span class="spanish-text">Total</span></p>
 								<div class="clear"></div>
 							</div>
 							<div class="clear"></div>
@@ -185,7 +80,7 @@
 						</div>
 						<div class="right-column">
 							<p class="right-text bold">$63.25</p>
-							<p class="left-text bold">Paid</p>
+							<p class="left-text bold"><span class="english-text">Paid</span><span class="spanish-text">Pagado</span></p>
 							<div class="clear"></div>
 						</div>
 						<div class="clear"></div>
@@ -195,29 +90,10 @@
 				</div> <!--end of row -->
 			</div> <!--end of wrapper -->
 		<footer class="pad4">
-			<p class="bold marbot20 font20 mobileFont14"><a href="secureOrder.html">Order Now</a> | <a href="privacy.html">Privacy Policy</a> | <a href="contact.html">Contact Us</a> | <a href="terms.html">Terms and Conditions</a></p>
-			<p class="bold marbot20 font20 mobileFont14">&copy;Copyright 2019 Starlyte AutoClean Mop LLC - All Rights Reserved</p>
+			<p class="bold marbot20 font20 mobileFont14"><a href="secureOrder.html"><span class="english-text">Order Now</span><span class="spanish-text">Ordene Ahora</span></a> | <a href="privacy.html"><span class="english-text">Privacy Policy</span><span class="spanish-text">Política de privacidad</span></a> | <a href="contact.html"><span class="english-text">Contact Us</span><span class="spanish-text">Contáctenos</span></a> | <a href="terms.html"><span class="english-text">Terms and Conditions</span><span class="spanish-text">Términos Y Condiciones</span></a></p>
+			<p class="bold marbot20 font20 mobileFont14"><span class="english-text">&copy;Copyright 2019 Starlyte AutoClean Mop LLC - All Rights Reserved</span><span class="spanish-text">&copy;Copyright 2019 Starlyte AutoClean Mop LLC – Todos los Derechos Reservados</span></p>
 		</footer> 
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-		<script>
-			$(document).ready(function() {
-				$(".language-button").click(function() {
-
-					function SpanishOn() {
-						$(".language-button").html("English");
-						$(".english-text").hide();
-						$(".spanish-text").show();
-					}
-
-					function SpanishOff() {
-						$(".language-button").html("Español");
-						$(".spanish-text").hide();
-						$(".english-text").show();
-					}
-
-					return (this.tog = !this.tog) ? SpanishOn() : SpanishOff();
-				})
-			})
-		</script>
+		<script src="js/main.js"></script>
 	</body>
 	</html>
